--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ Suggests:
     covr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/Nico0825/rPackageTutorial
+BugReports: https://github.com/Nico0825/rPackageTutorial/issues
